# GitHubPagesTest-MkDocs

./: .gitignore  404.html  Mkdocs.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml
docs/: index.md
pages/: index.md
search/: search_index.json
static/: index.html
