[tool.poetry]
name = "GitHubPagesTest"
version = "0.1.0"
description = ""
authors = ["Thomas Graf <tngraf@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
